--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,37 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment files
-.env
-.env.local
-.env.*.local
-*.env
-
-# Runtime data
-visitor-stats.json
-pids/
-*.pid
-*.seed
-*.pid.lock
+package-lock.json
 
 # Logs
 logs/
 *.log
+npm-debug.log*
 
-# Security and sensitive files
-nginx/*.conf
-deploy/secrets/
-*.pem
-*.key
-*.crt
-*.cert
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# IDE / Editor directories
-.idea/
+# IDE files
 .vscode/
+.idea/
 *.swp
 *.swo
-*~
 
-# OS generated files
+# OS files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# Production build files
+# Build output
 dist/
 build/
 
-# Local development files
-*.local
-*.local.* 
+# Temporary files
+tmp/
+temp/
+
+# Security-related files
+*.pem
+*.key
+*.cert
+*.crt 
