--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-    "name": "qiaozhishuo-website",
+    "name": "qiaozhishuo",
     "version": "1.0.0",
-    "description": "QiaoZhiShuo's personal website",
+    "description": "Qiaozhishuo Website",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "./scripts/start.sh",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.18.2",
-        "cors": "^2.8.5"
+        "express-rate-limit": "^7.1.5",
+        "helmet": "^7.1.0",
+        "morgan": "^1.10.0",
+        "winston": "^3.11.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
