--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,22 @@
 # Server Configuration
+NODE_ENV=production
 PORT=3000
-NODE_ENV=development
 
 # Security
-SESSION_SECRET=your-long-random-string
-CORS_ORIGIN=https://qiaozhishuo.com,https://www.qiaozhishuo.com
+SESSION_SECRET=replace_with_long_random_string
+COOKIE_SECRET=replace_with_long_random_string
+JWT_SECRET=replace_with_long_random_string
+
+# CORS Configuration
+ALLOWED_ORIGINS=https://qiaozhishuo.com,https://www.qiaozhishuo.com
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
-RATE_LIMIT_MAX=100
+RATE_LIMIT_MAX_REQUESTS=100
 
-# Cookie Settings
-COOKIE_SECRET=another-long-random-string
-COOKIE_MAX_AGE=86400000  # 24 hours
+# SSL Configuration
+SSL_CERT_PATH=/etc/letsencrypt/live/qiaozhishuo.com/fullchain.pem
+SSL_KEY_PATH=/etc/letsencrypt/live/qiaozhishuo.com/privkey.pem
 
-# Do not use these values in production!
-# Generate strong random values for all secrets 
+# Generate strong random values for all secrets using:
+# node -e "console.log(require('crypto').randomBytes(64).toString('hex'));" 
