--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "express-rate-limit": "^7.1.5",
         "helmet": "^7.1.0",
